# terminado

./: .travis.yml  pyproject.toml
terminado/: management.py  winterm.py
terminado/tests/: basic_test.py
