[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "terminado"
author = "Thomas Kluyver"
author-email = "thomas@kluyver.me.uk"
home-page = "https://github.com/takluyver/terminado"
description-file = "README.rst"
requires = [
    "ptyprocess;os_name==posix",
    "pywinpty;os_name==nt,python_version>='3.0'",
    "tornado (>=4)",
]
classifiers=[
    "Environment :: Web Environment",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]
